src/patches/cfltk_1_5_23/cfl.h

#define __CFL_H__
typedef struct Fl_Widget Fl_Widget;
typedef struct Fl_Widget_Tracker Fl_Widget_Tracker;
typedef void (*Fl_Awake_Handler)(void *data);
int Fl_run(void);
int Fl_check(void);
int Fl_ready(void);
void Fl_release(void);
int Fl_reload_scheme(void);
int Fl_menu_linespacing(void);
void Fl_set_menu_linespacing(int H);
int Fl_lock(void);
void Fl_unlock(void);
int Fl_awake_callback(Fl_Awake_Handler handler, void *data);
void Fl_awake(void);
void Fl_set_scrollbar_size(int);
int Fl_scrollbar_size(void);
int Fl_event(void);
int Fl_event_key(void);
int Fl_event_original_key(void);
int Fl_event_key_down(int);
const char *Fl_event_text(void);
int Fl_event_button(void);
int Fl_event_clicks(void);
int Fl_event_x(void);
int Fl_event_y(void);
int Fl_event_x_root(void);
int Fl_event_y_root(void);
int Fl_event_dx(void);
int Fl_event_dy(void);
void Fl_get_mouse(int *, int *);
int Fl_event_is_click(void);
int Fl_event_length(void);
int Fl_event_state(void);
int Fl_w(void);
int Fl_h(void);
int Fl_screen_x(void);
int Fl_screen_y(void);
int Fl_screen_h(void);
int Fl_screen_w(void);
int Fl_compose(int *del);
void Fl_compose_reset(void);
int Fl_compose_state(void);
void Fl_copy(const char *stuff, int len, int destination);
void Fl_paste_text(Fl_Widget *, int src);
void Fl_paste_image(Fl_Widget *widget, int src);
int Fl_set_scheme(const char *scheme);
int Fl_scheme(void);
const char *Fl_scheme_string(void);
int Fl_visible_focus(void);
void Fl_set_visible_focus(int);
void Fl_set_box_type(int, int);
int Fl_box_shadow_width(void);
void Fl_set_box_shadow_width(int W);
int Fl_box_border_radius_max(void);
void Fl_set_box_border_radius_max(int R);
unsigned int
Fl_get_rgb_color(unsigned char r, unsigned char g, unsigned char b);
void Fl_set_color(
    unsigned int c, unsigned char r, unsigned char g, unsigned char b
);
void Fl_set_color_with_alpha(
    unsigned int c,
    unsigned char r,
    unsigned char g,
    unsigned char b,
    unsigned char a
);
const char *Fl_get_font(int idx);
const char *Fl_get_font_name(int idx);
const char *Fl_get_font_name2(int idx, int *attributes);
int Fl_get_font_sizes(int font, int **sizep);
int Fl_set_fonts(const char *c);
void Fl_set_font(int, int);
void Fl_set_font2(int, const char *);
void Fl_set_font_size(int);
int Fl_font_size(void);
void Fl_add_handler(int (*ev_handler)(int ev));
void Fl_awake_msg(void *msg);
void *Fl_thread_msg(void);
int Fl_wait(void);
double Fl_wait_for(double);
void Fl_add_timeout(double t, void (*)(void *), void *);