src/cfl.pas

{
    MIT License

    Copyright (c) 2026 Krzysztof Dibowski

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all
    copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
    SOFTWARE.
}
unit cfl;
interface
(* === Added / Modified by cfltk2pas === *)
uses 
  cfl_macros;
(* ====== *)

{
  Automatically converted by H2Pas 1.0.0 from include/out/cfl.h
  The following command line parameters were used:
    -d
    -D
    -p
    -e
    -w
    -l
    libcfltk
    -o
    /home/dibo/praca/projects/PasFLTK/src/cfl.pas
    include/out/cfl.h
}

  {$IFNDEF USE_FLTK_STATIC}
    const
      External_library={$IFDEF unix}'libcfltk.so'{$ELSE}'cfltk.dll'{$ENDIF};
  {$ELSE}
    {$LINKLIB cfltk}
    {$LINKLIB fltk_images}
    {$LINKLIB fltk_jpeg}
    {$LINKLIB fltk_png}
    {$LINKLIB fltk_forms}
    {$LINKLIB fltk_z}
    {$LINKLIB fltk}
    {$IFDEF unix}
      {$LINKLIB X11}
      {$LINKLIB Xext}
      {$LINKLIB pthread}
      {$LINKLIB Xinerama}
      {$LINKLIB Xfixes}
      {$LINKLIB Xcursor}
      {$LINKLIB Xft}
      {$LINKLIB Xrender}
      {$LINKLIB fontconfig}
    {$ENDIF}
    {$IFDEF USE_FLTK_PANGO}
      {$LINKLIB pango-1.0}
      {$LINKLIB pangoxft-1.0}
    {$ENDIF}
    {$IFDEF USE_FLTK_CAIRO}
      {$LINKLIB cairo}
      {$LINKLIB pangocairo-1.0}
    {$ENDIF}
    {$LINKLIB dl}
    {$LINKLIB m}
    {$LINKLIB stdc++}
  {$ENDIF}
const
  cPASFLTK_VER = '1.5.23.3';
  cPASFLTK_CFLTK_VER = '1.5.23';
  cPASFLTK_FLTK_VER = '1.4.5';

{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}

{$ifndef __CFL_H__}

(* === Added / Modified by cfltk2pas === *)
type
  Psingle = ^single;
  PPlongint = ^Plongint;
  PFl_Widget_Tracker = ^Fl_Widget_Tracker;
  PFl_Widget = ^Fl_Widget;
  Fl_Widget_Tracker = record end;
  Fl_Widget = cfl_macros.Fl_Widget;
  Fl_Awake_Handler = procedure (data:pointer);cdecl;
  Fl_Callback = procedure (_para1:PFl_Widget; _para2:Pointer);cdecl;
(* ====== *)

  function Fl_run:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_run';

  function Fl_check:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_check';

  function Fl_ready:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_ready';

  procedure Fl_release;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_release';

  function Fl_reload_scheme:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_reload_scheme';

  function Fl_menu_linespacing:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_menu_linespacing';

  procedure Fl_set_menu_linespacing(H:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_menu_linespacing';

  function Fl_lock:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_lock';

  procedure Fl_unlock;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_unlock';

  function Fl_awake_callback(handler:Fl_Awake_Handler; data:pointer):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_awake_callback';

  procedure Fl_awake;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_awake';

  procedure Fl_set_scrollbar_size(_para1:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_scrollbar_size';

  function Fl_scrollbar_size:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_scrollbar_size';

  function Fl_event:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event';

  function Fl_event_key:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_key';

  function Fl_event_original_key:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_original_key';

  function Fl_event_key_down(_para1:longint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_key_down';

  function Fl_event_text:Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_text';

  function Fl_event_button:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_button';

  function Fl_event_clicks:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_clicks';

  function Fl_event_x:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_x';

  function Fl_event_y:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_y';

  function Fl_event_x_root:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_x_root';

  function Fl_event_y_root:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_y_root';

  function Fl_event_dx:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_dx';

  function Fl_event_dy:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_dy';

  procedure Fl_get_mouse(_para1:Plongint; _para2:Plongint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_mouse';

  function Fl_event_is_click:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_is_click';

  function Fl_event_length:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_length';

  function Fl_event_state:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_event_state';

  function Fl_w:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_w';

  function Fl_h:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_h';

  function Fl_screen_x:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_x';

  function Fl_screen_y:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_y';

  function Fl_screen_h:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_h';

  function Fl_screen_w:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_screen_w';

  function Fl_compose(del: Plongint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_compose';

  procedure Fl_compose_reset;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_compose_reset';

  function Fl_compose_state:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_compose_state';

  procedure Fl_copy(stuff:Pchar; len:longint; destination:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_copy';

  procedure Fl_paste_text(_para1:PFl_Widget; src:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_paste_text';

  procedure Fl_paste_image(widget: PFl_Widget; src:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_paste_image';

  function Fl_set_scheme(scheme:Pchar):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_scheme';

  function Fl_scheme:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_scheme';

  function Fl_scheme_string:Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_scheme_string';

  function Fl_visible_focus:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_visible_focus';

  procedure Fl_set_visible_focus(_para1:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_visible_focus';

  procedure Fl_set_box_type(_para1:longint; _para2:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_box_type';

  function Fl_box_shadow_width:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_shadow_width';

  procedure Fl_set_box_shadow_width(W:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_box_shadow_width';

  function Fl_box_border_radius_max:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_box_border_radius_max';

  procedure Fl_set_box_border_radius_max(R:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_box_border_radius_max';

  function Fl_get_rgb_color(r:byte; g:byte; b:byte):dword;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_rgb_color';

  procedure Fl_set_color(c:dword; r:byte; g:byte; b:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_color';

  procedure Fl_set_color_with_alpha(c:dword; r:byte; g:byte; b:byte; a:byte);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_color_with_alpha';

  function Fl_get_font(idx:longint):Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_font';

  function Fl_get_font_name(idx:longint):Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_font_name';

  function Fl_get_font_name2(idx:longint; attributes: Plongint):Pchar;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_font_name2';

  function Fl_get_font_sizes(font:longint; sizep: PPlongint):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_get_font_sizes';

  function Fl_set_fonts(c:Pchar):longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_fonts';

  procedure Fl_set_font(_para1:longint; _para2:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_font';

  procedure Fl_set_font2(_para1:longint; _para2:Pchar);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_font2';

  procedure Fl_set_font_size(_para1:longint);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_set_font_size';

  function Fl_font_size:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_font_size';

  procedure Fl_add_handler(ev_handler:Fl_ArgCallback1);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_handler';

  procedure Fl_awake_msg(msg:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_awake_msg';

  function Fl_thread_msg:pointer;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_thread_msg';

  function Fl_wait:longint;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_wait';

  function Fl_wait_for(_para1:double):double;cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_wait_for';

  procedure Fl_add_timeout(t:double; _para2:Fl_ArgCallback2; _para3:pointer);cdecl;external {$IFNDEF USE_FLTK_STATIC}External_library {$ENDIF}name 'Fl_add_timeout';
